--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
+        "phpmailer/dkimvalidator": "^0.3.0",
         "phpmailer/phpmailer": "^6.10",
         "phpoffice/phpword": "^1.4"
     },
