--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@fullcalendar/daygrid": "^6.1.18",
+        "@fullcalendar/interaction": "^6.1.18",
+        "@fullcalendar/react": "^6.1.18",
+        "@vitejs/plugin-react": "^4.6.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
     }
 }
