un passo ancora avanti così funziona benino. Standardizzazione ulteriore in corso

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
+                "@vitejs/plugin-react": "^4.0.0",
+"@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.2",
@@ -21,6 +22,7 @@
     "dependencies": {
         "@fullcalendar/daygrid": "^6.1.18",
         "@fullcalendar/interaction": "^6.1.18",
+        "@fullcalendar/list": "^6.1.18",
         "@fullcalendar/react": "^6.1.18",
         "@vitejs/plugin-react": "^4.6.0",
         "react": "^19.1.0",
