--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dompdf/dompdf": "^3.1",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "phpmailer/dkimvalidator": "^0.3.0",
         "phpmailer/phpmailer": "^6.10",
+        "phpoffice/phpspreadsheet": "^4.5",
         "phpoffice/phpword": "^1.4"
     },
     "require-dev": {
